Add Vercel configuration to pull Git LFS files during build

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
+  "buildCommand": "git lfs pull && npm run build",
+  "git": {
+    "deploymentEnabled": {
+      "main": true,
+      "dev": true
     }
-  ]
+  }
 }
